test: use compatible file io helpers